--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,16 +18,19 @@ services:
   backend:
     container_name: backend
     build:
-      context: ./backend
-      dockerfile: GraphQL/Dockerfile
+      context: .
+      dockerfile: backend/GraphQL/Dockerfile
     ports:
       - "5000:8080"
+    environment:
+      MySqlConnectionString: server=mysql;port=3306;database=imdb;user=root;password=admin;default command timeout=600
+      ASPNETCORE_ENVIRONMENT: Development
 
   seed_data:
     container_name: seeddata
     build:
-      context: ./SeedData
-      dockerfile: SeedData/Dockerfile
+      context: .
+      dockerfile: SeedData/SeedData/Dockerfile
     depends_on:
       - mysql
       - mongodb1
