--- a/backend/unit.tests/unit.tests.csproj
+++ b/backend/unit.tests/unit.tests.csproj
@@ -20,4 +20,7 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ef-models\EfCoreModelsLib\EfCoreModelsLib.csproj" />
+  </ItemGroup>
 </Project>
