Adding a script for code_coverage that generates the coverage report for later use, and adding dotnet test to the uild.sh shell script. #65

--- a/.gitignore
+++ b/.gitignore
@@ -657,3 +657,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,windows,node,aspnetcore,dotnetcore,dotenv,test,visualstudiocode,rider
 megalinter-reports
+docs/coveragereport/** 
