--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "husky",
     "dev_up": "bash ./scripts/dev_up.sh",
     "dev_up_build": "bash ./scripts/dev_up_build.sh",
-    "dev_down": "bash ./scripts/dev_down.sh"
+    "dev_down": "bash ./scripts/dev_down.sh",
+    "code_coverage": "bash ./scripts/code_coverage.sh"
   },
   "repository": {
     "type": "git",
