--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -10,27 +10,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Just a Test Job
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Run a Simple Command
-        run: echo "This is a test job for push main."
-
-  # ci-docker-template:
-  #   name: CI Docker Build and Push Docker Image
-  #   needs: test
-  #   uses: ./.github/workflows/ci-docker-template.yml
-  #   permissions:
-  #     contents: read
-  #     packages: write
+  unit-tests:
+    name: Run Unit Tests
+    uses: ./.github/workflows/unit-tests.yml
 
   build-backend-image:
     name: CI Docker Build and Push GraphQL Docker Image
-    needs: test
+    needs: unit-tests
     uses: ./.github/workflows/ci-docker-builder-graphql.yml
     permissions:
       contents: read
