--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -1,4 +1,4 @@
-name: Merge to Main Workflow
+name: Merge to Main Workflow - Backend
 
 on:
   push:
@@ -19,14 +19,6 @@ jobs:
 
       - name: Run a Simple Command
         run: echo "This is a test job for push main."
-
-  # ci-docker-template:
-  #   name: CI Docker Build and Push Docker Image
-  #   needs: test
-  #   uses: ./.github/workflows/ci-docker-template.yml
-  #   permissions:
-  #     contents: read
-  #     packages: write
 
   build-backend-image:
     name: CI Docker Build and Push GraphQL Docker Image
