--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -5,6 +5,8 @@ on:
     secrets:
       BREZOR_DEPLOY_HOOK:
         required: true
+      REX_RENDER_DEPLOY_HOOK:
+        required: true
 
 jobs:
   deploy-frontend:
@@ -16,5 +18,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env:
           BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+          REX_RENDER_DEPLOY_HOOK: ${{ secrets.REX_RENDER_DEPLOY_HOOK }}
         run: |
           curl "$BREZOR_DEPLOY_HOOK"
+          curl "$REX_RENDER_DEPLOY_HOOK"
