--- a/.github/workflows/push-main-frontend.yml
+++ b/.github/workflows/push-main-frontend.yml
@@ -20,9 +20,17 @@ jobs:
       - name: Run a Simple Command
         run: echo "This is a test job for push main."
 
+  build-frontend-image:
+    name: CI Docker Build and Push Frontend Docker Image
+    needs: test
+    uses: ./.github/workflows/ci-docker-builder-frontend.yml
+    permissions:
+      contents: read
+      packages: write
+
   deploy-frontend:
     name: Deploy Frontend Application
-    needs: test
+    needs: build-frontend-image
     uses: ./.github/workflows/deploy-frontend.yml
     secrets:
       BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
