--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview --port $PORT --host 0.0.0.0"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.9.0",
     "@chakra-ui/react": "^3.27.0",
     "@emotion/react": "^11.14.0",
     "next-themes": "^0.4.6",
