Feat: add integration tests for MysqlTitlesRepo and related services Integration-test for ttiles and extranal api with pipeline Fixes #100

--- a/backend/integration.tests/integration.tests.csproj
+++ b/backend/integration.tests/integration.tests.csproj
@@ -17,6 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ef-models\EfCoreModelsLib\EfCoreModelsLib.csproj" />
+    <ProjectReference Include="..\GraphQL\GraphQL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
