--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -6,7 +6,11 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "importOrder": ["^react$", "<THIRD_PARTY_MODULES>", "^@/"],
+  "importOrder": [
+    "^react$",
+    "<THIRD_PARTY_MODULES>",
+    "^@/"
+  ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
