Feat: add integration test workflow and update push workflow to include integration tests #100

--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -14,9 +14,14 @@ jobs:
     name: Run Unit Tests
     uses: ./.github/workflows/unit-tests.yml
 
+  integration-tests:
+    name: Run Integration Tests
+    needs: unit-tests
+    uses: ./.github/workflows/integration-test-v2.yml
+
   build-backend-image:
     name: CI Docker Build and Push GraphQL Docker Image
-    needs: unit-tests
+    needs: integration-tests
     uses: ./.github/workflows/ci-docker-builder-graphql.yml
     permissions:
       contents: read
