--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev/*
     paths:
       - "backend/**"
       - ".github/workflows/push-main-backend.yml"
