feat: add integration tests workflow and update references in pull request and push workflows

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,4 +8,7 @@ jobs:
     name: Run backend Unit Tests
     uses: ./.github/workflows/unit-tests.yml
 
-        
+  integration-tests:
+    name: Run Integration Tests
+    needs: unit-tests
+    uses: ./.github/workflows/integration-tests.yml
