--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -17,8 +17,8 @@ jobs:
           node-version: 20
 
       - name: Install frontend deps
-        working-directory: frontend # <- RET til vores frontend-sti
-        run: npm ci
+        working-directory: frontend 
+        run: npm ci --ignore-scripts # <- Kan fremtidig fejle, hvis en dependency kræver install scripts
 
       - name: Start frontend
         working-directory: frontend # ← evt. npm run start i stedet
