Feat: add workflow for api-test #107

--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -34,3 +34,10 @@ jobs:
     secrets:
       BREZOR_BACKEND_DEPLOY_HOOK: ${{ secrets.BREZOR_BACKEND_DEPLOY_HOOK }}
       REX_BACKEND_DEPLOY_HOOK: ${{ secrets.REX_BACKEND_DEPLOY_HOOK }}
+
+  automated-api-tests:
+    name: Run Automated API Tests
+    needs: deploy-backend
+    uses: ./.github/workflows/api-test.yml
+    secrets:
+      POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
