Fix: correct environment name in api-test workflow and update push-main-backend triggers

--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev/api-test
     paths:
       - "backend/**"
       - ".github/workflows/push-main-backend.yml"
