--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - main
       - dev/api-test
-    paths:
-      - "backend/**"
-      - ".github/workflows/push-main-backend.yml"
+    # paths:
+    #   - "backend/**"
+    #   - ".github/workflows/push-main-backend.yml"
   workflow_dispatch:
 
 jobs:
