Log HOST and auth0_url in API test workflow
Add echo commands to output HOST and auth0_url variables

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -34,3 +34,5 @@ jobs:
                     --env-var "audience=$audience" \
                     --env-var "grant_type=$grant_type" \
                     --env-var "auth0_url=$auth0_url"
+                    echo $HOST
+                    echo $auth0_url
