--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -46,7 +46,9 @@ jobs:
       CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       AUDIENCE: ${{ secrets.AUDIENCE }}
       GRANT_TYPE: ${{ secrets.GRANT_TYPE }}
+    with:
+      BACKEND_HOST_URL: ${{ vars.BACKEND_HOST_URL }}
+      AUTH0_URL: ${{ vars.AUTH0_URL }}
+
     permissions:
       contents: read
-
-
