--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -42,13 +42,13 @@ jobs:
     uses: ./.github/workflows/api-test.yml
     secrets:
       POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
-      CLIENT_ID: ${{ secrets.CLIENT_ID }}
-      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-      AUDIENCE: ${{ secrets.AUDIENCE }}
-      GRANT_TYPE: ${{ secrets.GRANT_TYPE }}
+      client_id: ${{ secrets.CLIENT_ID }}
+      client_secret: ${{ secrets.CLIENT_SECRET }}
+      audience: ${{ secrets.AUDIENCE }}
+      grant_type: ${{ secrets.GRANT_TYPE }}
     with:
-      BACKEND_HOST_URL: ${{ vars.BACKEND_HOST_URL }}
-      AUTH0_URL: ${{ vars.AUTH0_URL }}
+      HOST: ${{ vars.BACKEND_HOST_URL }}
+      auth0_url: ${{ vars.AUTH0_URL }}
 
     permissions:
       contents: read
