Add required inputs for BACKEND_HOST_URL and AUTH0_URL in API workflows

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -13,6 +13,13 @@ on:
         required: true
       grant_type:
         required: true
+    inputs:
+      BACKEND_HOST_URL:
+        required: true
+        type: string
+      AUTH0_URL:
+        required: true
+        type: string
 
 jobs:
   automated-api-tests:
