--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -1,30 +1,48 @@
 name: Automated API tests using Postman CLI
 
 on:
-    workflow_call:
-        secrets:
-        POSTMAN_API_KEY:
+  workflow_call:
+    secrets:
+      POSTMAN_API_KEY:
+        required: true
+      client_id:
+        required: true
+      client_secret:
+        required: true
+      audience:
+        required: true
+      grant_type:
+        required: true
+
 
 jobs:
-    automated-api-tests:
-        runs-on: ubuntu-latest
-        environment: secrets
-        steps:
-            - uses: actions/checkout@v4
-            - name: Install Postman CLI
-              run: |
-                  curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+  automated-api-tests:
+    runs-on: ubuntu-latest
+    environment: secrets
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Postman CLI
+        run: |
+          curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
 
-            - name: Login to Postman CLI
-              run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+      - name: Login to Postman CLI
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
 
-            - name: Run API tests
-              env:
-                  HOST: ${{ vars.BACKEND_HOST_URL }}
-                  client_id: ${{ secrets.CLIENT_ID }}
-                  client_secret: ${{ secrets.CLIENT_SECRET }}
-                  audience: ${{ secrets.AUDIENCE }}
-                  grant_type: ${{ secrets.GRANT_TYPE }}
-                  auth0_url: ${{ secrets.AUTH0_URL }}
-              run: |
-                  postman collection run "50651964-7dfd3665-71a9-4fdd-bd50-e5c6d3d81fc2" -e "50651964-a67099ae-1e60-4c29-9f18-71e6cff0ff69"
+      - name: Run API tests
+        env:
+          HOST: ${{ vars.BACKEND_HOST_URL }}
+          client_id: ${{ secrets.CLIENT_ID }}
+          client_secret: ${{ secrets.CLIENT_SECRET }}
+          audience: ${{ secrets.AUDIENCE }}
+          grant_type: ${{ secrets.GRANT_TYPE }}
+          auth0_url: ${{ vars.AUTH0_URL }}
+        run: |
+          postman collection run "50651964-7dfd3665-71a9-4fdd-bd50-e5c6d3d81fc2" \
+          -e "50651964-a67099ae-1e60-4c29-9f18-71e6cff0ff69" \
+          --env-var "HOST=$HOST" \
+          --env-var "client_id=$client_id" \
+          --env-var "client_secret=$client_secret" \
+          --env-var "audience=$audience" \
+          --env-var "grant_type=$grant_type" \
+          --env-var "auth0_url=$auth0_url"
+          
