Run workflow to be failed

--- a/.github/workflows/push-main-frontend.yml
+++ b/.github/workflows/push-main-frontend.yml
@@ -4,25 +4,34 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "frontend/**"
-      - ".github/workflows/push-main-frontend.yml"
+      - dev/apiTest
+    # paths:
+    #   - "frontend/**"
+    #   - ".github/workflows/push-main-frontend.yml"
   workflow_dispatch:
-
+  workflow_run:
+    workflows: ["Automated API tests using Postman CLI"]
+    types: 
+      - completed
+      
 jobs:
-  test:
+  check-api-test:
     name: Just a Test Job
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Check API Test Result
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
+        run: echo "API tests passed, proceeding with frontend workflow."
+      - name: Fail if API Tests Failed
+        if: ${{ github.event.workflow_run.conclusion != 'success' }}
+        run: |
+          echo "API tests failed, stopping the frontend workflow."
+          exit 1
 
-      - name: Run a Simple Command
-        run: echo "This is a test job for push main."
 
   build-frontend-image:
     name: CI Docker Build and Push Frontend Docker Image
-    needs: test
+    needs: check-api-test
     uses: ./.github/workflows/ci-docker-builder-frontend.yml
     permissions:
       contents: read
