--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -5,13 +5,13 @@ on:
     secrets:
       POSTMAN_API_KEY:
         required: true
-      client_id:
+      CLIENT_ID:
         required: true
-      client_secret:
+      CLIENT_SECRET:
         required: true
-      audience:
+      AUDIENCE:
         required: true
-      grant_type:
+      GRANT_TYPE:
         required: true
 
 jobs:
@@ -30,17 +30,23 @@ jobs:
       - name: Run API tests
         env:
           HOST: ${{ vars.BACKEND_HOST_URL }}
-          client_id: ${{ secrets.CLIENT_ID }}
-          client_secret: ${{ secrets.CLIENT_SECRET }}
-          audience: ${{ secrets.AUDIENCE }}
-          grant_type: ${{ secrets.GRANT_TYPE }}
-          auth0_url: ${{ vars.AUTH0_URL }}
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          AUDIENCE: ${{ secrets.AUDIENCE }}
+          GRANT_TYPE: ${{ secrets.GRANT_TYPE }}
+          AUTH0_URL: ${{ vars.AUTH0_URL }}
         run: |
-          postman collection run "50651964-7dfd3665-71a9-4fdd-bd50-e5c6d3d81fc2" \
-          -e "50651964-a67099ae-1e60-4c29-9f18-71e6cff0ff69" \
-          --env-var "HOST=$HOST" \
-          --env-var "client_id=$client_id" \
-          --env-var "client_secret=$client_secret" \
-          --env-var "audience=$audience" \
-          --env-var "grant_type=$grant_type" \
-          --env-var "auth0_url=$auth0_url"
+          # Write sensitive credentials to a temporary env file  
+          echo "CLIENT_ID=$CLIENT_ID" > .env.postman  
+          echo "CLIENT_SECRET=$CLIENT_SECRET" >> .env.postman  
+          echo "AUDIENCE=$AUDIENCE" >> .env.postman  
+          echo "GRANT_TYPE=$GRANT_TYPE" >> .env.postman  
+          echo "AUTH0_URL=$AUTH0_URL" >> .env.postman  
+
+          postman collection run  "${{vars.POSTMAN_COLLECTION_ID}}" \
+          -e "${{vars.POSTMAN_ENVIRONMENT_ID}}" --color red \
+          --env-var "HOST=$HOST" \  
+          --env-file .env.postman  
+          
+          # Clean up env file  
+          rm -f .env.postman  
