--- a/.github/workflows/push-main-backend.yml
+++ b/.github/workflows/push-main-backend.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "backend/**"
-      - ".github/workflows/push-main-backend.yml"
+      - dev/apiTest
+    # paths:
+    #   - "backend/**"
+    #   - ".github/workflows/push-main-backend.yml"
   workflow_dispatch:
 
 jobs:
