--- a/.github/workflows/push-main-frontend.yml
+++ b/.github/workflows/push-main-frontend.yml
@@ -11,35 +11,35 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Just a Test Job
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+  # test:
+  #   name: Just a Test Job
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v3
 
-      - name: Run a Simple Command
-        run: echo "This is a test job for push main."
+  #     - name: Run a Simple Command
+  #       run: echo "This is a test job for push main."
 
-  build-frontend-image:
-    name: CI Docker Build and Push Frontend Docker Image
-    needs: test
-    uses: ./.github/workflows/ci-docker-builder-frontend.yml
-    permissions:
-      contents: read
-      packages: write
+  # build-frontend-image:
+  #   name: CI Docker Build and Push Frontend Docker Image
+  #   needs: test
+  #   uses: ./.github/workflows/ci-docker-builder-frontend.yml
+  #   permissions:
+  #     contents: read
+  #     packages: write
 
-  deploy-frontend:
-    name: Deploy Frontend Application
-    needs: build-frontend-image
-    uses: ./.github/workflows/deploy-frontend.yml
-    secrets:
-      BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
-      REX_RENDER_DEPLOY_HOOK: ${{ secrets.REX_RENDER_DEPLOY_HOOK }}
+  # deploy-frontend:
+  #   name: Deploy Frontend Application
+  #   needs: build-frontend-image
+  #   uses: ./.github/workflows/deploy-frontend.yml
+  #   secrets:
+  #     BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+  #     REX_RENDER_DEPLOY_HOOK: ${{ secrets.REX_RENDER_DEPLOY_HOOK }}
 
   E2E-Tests:
     name: E2E Tests Workflow
-    needs: deploy-frontend
+    # needs: deploy-frontend
     uses: ./.github/workflows/e2e-tests.yml
     permissions:
       contents: read
