--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install Playwright browsers
         working-directory: e2e-playwright-tests/PlaywrightTests
-        run: pwsh bin/Debug/net9.0/playwright.ps1 install
+        run: bin/Debug/net9.0/playwright.ps1 install
 
       - name: Run E2E Playwright tests
         working-directory: e2e-playwright-tests/PlaywrightTests
