--- a/.github/workflows/push-main-frontend.yml
+++ b/.github/workflows/push-main-frontend.yml
@@ -35,3 +35,8 @@ jobs:
     secrets:
       BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
       REX_RENDER_DEPLOY_HOOK: ${{ secrets.REX_RENDER_DEPLOY_HOOK }}
+
+  E2E-Tests:
+    name: E2E Tests Workflow
+    needs: deploy-frontend
+    uses: ./.github/workflows/e2e-tests.yml
