--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -24,16 +24,20 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
+    "erasableSyntaxOnly": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
       "@/*": [
         "./src/*",
       ]
-    }
+    },
   },
   "include": [
-    "src"
+    "src",
+    "codegen.ts"
+  ],
+  "exclude": [
+    "src/generated/**/*"
   ]
 }
