Changed project configuration

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -32,6 +32,12 @@
         "./src/*",
       ]
     },
+    "plugins": [
+      {
+        "name": "@0no-co/graphqlsp",
+        "schema": "./schema.graphql"
+      }
+    ]
   },
   "include": [
     "src",
