--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.15.2",
     "@eslint/js": "^9.36.0",
     "@graphql-codegen/cli": "^6.1.0",
     "@graphql-codegen/client-preset": "^5.2.1",
